添加了banner图片

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div class="fullwidthbanner">
             <ul>
                 <li data-transition="3dcurtain-horizontal" data-slotamount="15" data-masterspeed="300">
-                    <img src="../images/slides/banner5.jpg" alt="" />
+                    <img src="./images/index/banner5.jpg" alt="" />
                 </li>
                 <li data-transition="3dcurtain-vertical" data-slotamount="15" data-masterspeed="300" data-link="#">
-                    <img src="../images/slides/slide1.jpg" alt="" />
+                    <img src="./images/index/slide1.jpg" alt="" />
                 </li>
                 <li data-transition="flyin" data-slotamount="15" data-masterspeed="300">
-                    <img src="../images/slides/banner4.jpg" alt="" />
+                    <img src="./images/index/banner4.jpg" alt="" />
                 </li>
             </ul>
         </div>
